testsuite/bad/bad041.jl
int return(){ return 1; }

int main() { return 1; }
